# meldingen

./: .dockerignore  .env.example  .env.example.entra  .env.example.withentra  .gitignore  .pre-commit-config.yaml  Dockerfile  GM0363.geojson  Makefile  alembic.ini  azure-pipelines.yml  dev.env  docker-compose.cache.json  docker-compose.debug.yml  docker-compose.yml  main.py  meldingen-entrypoint.sh  mkdocs.yml  mypy-baseline.txt  otel-collector-config.yaml  package-lock.json  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-container.yml  ci.yml  cleanup-packages.yml  static-analysis.yml  tests.yml
api/app/signals/settings/: base.py
commands/: asset_types.py  azure.py  classifications.py  classifier.py  forms.py  groups.py  labels.py  meldingen.py  seed.py  sources.py  static_forms.py  users.py
docker/keycloak/: Dockerfile  export-realm.sh
docker/keycloak/import/: realm-export.json
docker/otel-collector/: Dockerfile  otel-collector-config-dev.yaml  otel-collector-config.yaml
docker/postgres/docker-entrypoint-initdb.d/: meldingen-test.sql
docs/: authentication.md  commands.md  glossary.md  index.md  statemachine.md  summary.md
docs/adr/: 12-1-2026-state-machine.md  2026-03-03-adapter-file-structure.md  23-12-2025-different-answer-models.md
docs/development/: dependency_management.md  linting_and_testing.md  setup.md  summary.md
docs/statemachines/: melding-process.md  melding-submit.md
meldingen/: __init__.py  actions.py  address.py  answer.py  asset.py  authentication.py  authorization.py  classification.py  config.py  containers.py  database.py  dependencies.py  exceptions.py  factories.py  generators.py  image.py  jsonlogic.py  labels.py  location.py  logging.py  mail.py  main.py  malware.py  markdown.py  middleware.py  models.py  output_schemas.py  reclassification.py  repositories.py  responders.py  schema_factories.py  schema_renderer.py  schemas.py  statemachine.py  static.py  token.py  validators.py  wfs.py
meldingen/actions/: asset.py  asset_type.py  attachment.py  base.py  classification.py  form.py  label.py  mail.py  melding.py  note.py  source.py  user.py  wfs.py
meldingen/adapters/classification/: agent_classifier.py  dummy_classifier.py
meldingen/adapters/malware/: azure_defender_for_storage_scanner.py  dummy_scanner.py
meldingen/api/: utils.py
meldingen/api/v1/: __init__.py  api.py
meldingen/api/v1/endpoints/: asset.py  asset_type.py  attachment.py  classification.py  docs.py  form.py  label.py  llm_eval.py  mail.py  melding.py  primary_form.py  source.py  static_form.py  user.py  utils.py  wfs.py
meldingen/schemas/: input.py  llm_eval.py  output.py  output_factories.py  types.py
meldingen/tasks/: llm_eval.py
migrations/: env.py  script.py.mako
migrations/versions/: 005fa65566c7_answer.py  02730cade609_attachment_optimized_path.py  0bdbf9571b2a_token.py  102eaa13b8d8_add_select_component_type_to_enum.py  12443e52b756_add_original_question_text_column.py  1516c4c88af8_conditional_column.py  1a9990c31186_add_llm_eval_run.py  1dff133d9463_attachment_optimized_path.py  1ee626c162c5_replace_show_char_count_with_max_char_.py  1fae2f582091_question_answer.py  20260316_add_instructions_to_classification.py  206d78263ea1_form_io_models.py  23f514d3746f_init_melding.py  2607118a0097_asset.py  304f00a0edb1_address_info_melding.py  30ba4ee50663_form_io_models.py  30ba4ee50663_forms_io_models.py  3c9411e76910_thumbnail_path_attachment.py  458776297082_added_created_at_and_updated_at_fields.py  4c490e6bbc0c_create_group.py  4e605f652d66_init.py  534a016640f8_melding_phone_and_email.py  5911ae2a50cb_added_foreign_key_constraints_to_the_.py  5bceab5940de_user_group.py  5d015538e015_add_tables_for_select_component.py  5d12506587d5_value_and_label_answer.py  633744d2ba79_added_attachment_model_relationship.py  6457634b25d9_formio_panel_component_title.py  6523e6015f31_add_instruction_field.py  674ac6d290b0_set_max_assets_non_nullable.py  696f35b71c7e_user_group.py  6b3db5c9e605_add_required_field_to_form_question_.py  6c2b254579da_melding_labels.py  73c1a14b1f62_time_question_component.py  781aa6a913a6_form_models.py  787eaeac6380_attachment_media_type_fields.py  7a9f5e2e9d1b_melding_urgency.py  7c0999220bbc_create_group.py  891e9506cd80_text_answer_from.py  8a68db304e9e_add_answer_snapshot_fields.py  (+35 more)
seed/: seed.md
seed/examples/: classifications.json
tests/: conftest.py  test_address.py  test_authentication.py  test_classification.py  test_classifications_command.py  test_discriminator.py  test_factories.py  test_generators.py  test_image.py  test_input_schemas.py  test_jsonlogic.py  test_llm_model_config.py  test_llm_provider.py  test_location.py  test_malware.py  test_markdown.py  test_seed_commands.py  test_static.py  test_validators.py  test_wfs.py
tests/api/: test_utils.py
tests/api/v1/endpoints/: base.py  conftest.py  test_asset.py  test_asset_type.py  test_attachment.py  test_classification.py  test_docs.py  test_form.py  test_label.py  test_llm_eval.py  test_mail.py  test_melding.py  test_note.py  test_primary_form.py  test_source.py  test_static_form.py  test_user.py  test_wfs.py
tests/llm_eval/: conftest.py  test_cases.json  test_classifier.py
tests/resources/: stadsdeel-centrum.json
tests/scenarios/: conftest.py  test_create_melding.py
tests/scenarios/context/: additional_questions_form.py  asset.py  attachment.py  classification.py  contact.py  create_melding.py  form.py  location.py  mail.py  melding.py  statemachine.py
tests/scenarios/features/: create_melding.feature
tests/tasks/: test_llm_eval.py
