[project]
name = "meldingen"
version = "0.1.0"
description = "The main meldingen project which includes the framework bindings."
authors = [
    {name = "Youri Westerman",email = "y.westerman@amsterdam.nl"},
    {name = "David van Buiten",email = "d.van.buiten@amsterdam.nl"},
]
readme = "README.md"
requires-python = "^3.12"

dependencies = [
    "alembic (>=1.14.1,<2.0.0)",
    "alembic-postgresql-enum (>=1.5.0,<2.0.0)",
    "asgi-correlation-id (>=4.3.4,<5.0.0)",
    "asyncpg (>=0.30.0,<1.0.0)",
    "azure-storage-blob (>=12.24.1,<13.0.0)",
    "fastapi[standard] (>=0.115.7,<1.0.0)",
    "geoalchemy2 (>=0.17.0,<1.0.0)",
    "geojson-pydantic (>=1.2.0,<2.0.0)",
    "httpx[http2] (>=0.28.1,<1.0.0)",
    "maykin-json-logic-py (>=0.13.0,<1.0.0)",
    "meldingen-core @ git+https://github.com/Amsterdam/meldingen-core.git",
    "mp-fsm @ git+https://github.com/Amsterdam/mp-fsm.git",
    "opentelemetry-exporter-otlp-proto-grpc (>=1.29.0,<2.0.0)",
    "opentelemetry-instrumentation-aiohttp-client (>=0.50b0,<0.51)",
    "opentelemetry-instrumentation-aiohttp-client (>=0.50b0,<0.51)",
    "opentelemetry-instrumentation-fastapi (>=0.50b0,<0.51)",
    "opentelemetry-instrumentation-httpx (>=0.50b0,<0.51)",
    "opentelemetry-instrumentation-sqlalchemy (>=0.50b0,<0.51)",
    "phonenumbers (>=8.13.53,<9.0.0)",
    "pydantic-extra-types (>=2.10.2,<3.0.0)",
    "pydantic-jsonlogic @ git+https://github.com/Amsterdam/pydantic-jsonlogic.git",
    "pydantic-media-type @ git+https://github.com/Amsterdam/pydantic-media-type.git",
    "pydantic-settings (>=2.7.0,<3.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "python-magic (>=0.4.27,<1.0.0)",
    "python-multipart (>=0.0.20,<1.0.0)",
    "shapely (>=2.0.6,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.37,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
asgi-lifespan = "^2.1.0"
black = "^25.1.0"
isort = "^6.0.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-material = "^9.6.2"
mkdocstrings = {version = "^0.28.0", extras = ["python"]}
mypy = "^1.14.0"
mypy-baseline = "^0.7.1"
pre-commit = "^4.1.0"
pytest = "^8.3.3"
pytest-alembic = "^0.11.1"
pytest-bdd = "^8.1.0"
pytest-cov = "^6.0.0"
typer = {extras = ["all"], version = "^0.15.1"}
types-shapely = "^2.0.0.20241221"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.env
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_third_party = ["meldingen_core"]
known_first_party = ["meldingen"]
overwrite_in_place = true

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
strict = true

[tool.mypy-baseline]
baseline_path = "mypy-baseline.txt"

[tool.coverage.run]
concurrency = ["greenlet"]
omit = [
  "tests/*",
  "migrations/env.py",
  "meldingen/dependencies.py",
  "meldingen/database.py",
]

[tool.pytest.ini_options]
bdd_features_base_dir = "tests/scenarios/features"
