[project]
name = "meldingen"
version = "0.1.0"
description = "The main meldingen project which includes the framework bindings."
authors = [
    { name = "Youri Westerman", email = "y.westerman@amsterdam.nl" },
    { name = "David van Buiten", email = "d.van.buiten@amsterdam.nl" },
    { name = "Ramon Hofmeister", email = "r.hofmeister@amsterdam.nl" },
    { name = "Joey Hendriks", email = "joey.hendriks@amsterdam.nl" },
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "alembic>=1.14.1,<2.0.0",
    "alembic-postgresql-enum>=1.5.0,<2.0.0",
    "amsterdam-mail-service-client @ git+https://github.com/Amsterdam/amsterdam-mail-service-client.git",
    "asgi-correlation-id>=4.3.4,<5.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "azure-storage-blob>=12.25.1,<12.29.0",
    "fastapi[standard]>=0.115.7,<1.0.0",
    "geoalchemy2>=0.17.0,<1.0.0",
    "geojson-pydantic>=1.2.0,<2.0.0",
    "httpx[http2]>=0.28.1,<1.0.0",
    "meldingen-core",
    "mp-fsm @ git+https://github.com/Amsterdam/mp-fsm.git",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0,<2.0.0",
    "opentelemetry-instrumentation-aiohttp-client>=0.55b1,<1.0",
    "opentelemetry-instrumentation-fastapi>=0.55b1,<1.0",
    "opentelemetry-instrumentation-httpx>=0.55b1,<1.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.55b1,<1.0",
    "pdok-api-client @ git+https://github.com/Amsterdam/pdok-api-client.git",
    "phonenumbers>=9.0.0,<9.1.0",
    "pydantic-ai-slim[openai]>=1.63.0,<2.0.0",
    "pydantic-extra-types>=2.10.2,<3.0.0",
    "pydantic-jsonlogic @ git+https://github.com/Amsterdam/pydantic-jsonlogic.git",
    "pydantic-media-type @ git+https://github.com/Amsterdam/pydantic-media-type.git",
    "pydantic-settings>=2.7.0,<3.0.0",
    "pydantic[email]>=2.10.6,<3.0.0",
    "pyjwt[crypto]>=2.10.1,<3.0.0",
    "python-jsonlogic>=0.1.0,<0.2.0",
    "python-magic>=0.4.27,<1.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "scalar-fastapi>=1.4.4,<2.0.0",
    "shapely>=2.0.6,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.37,<3.0.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0,<3",
    "black>=26.1.0,<27",
    "filelock>=3.20.3,<4",
    "isort>=7.0.0,<8",
    "mailpit-api-client[pytest]>=1.0.0,<2",
    "mkdocs-literate-nav>=0.6.1,<0.7",
    "mkdocs-material>=9.6.20,<10",
    "mkdocstrings[python]>=1.0.0,<2",
    "mypy>=1.18.2,<2",
    "mypy-baseline>=0.7.1,<1",
    "pre-commit>=4.5.0,<5",
    "pytest>=9.0.1,<10",
    "pytest-alembic>=0.12.1,<0.13",
    "pytest-bdd>=8.1.0,<9",
    "pytest-cov>=7.0.0,<8",
    "pytest-xdist[psutil]>=3.8.0,<4",
    "typer>=0.20.0,<0.21",
    "types-shapely>=2.1.0.20250917,<3",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.black]
line-length = 120
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.env
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_third_party = ["meldingen_core"]
known_first_party = ["meldingen"]
overwrite_in_place = true

[tool.mypy]
plugins = [
    "pydantic.mypy",
]
strict = true

[tool.mypy-baseline]
baseline_path = "mypy-baseline.txt"

[tool.coverage.run]
concurrency = ["greenlet", "multiprocessing", "thread"]
omit = [
    "tests/*",
    "migrations/env.py",
    "meldingen/dependencies.py",
    "meldingen/database.py",
]

[tool.pytest.ini_options]
bdd_features_base_dir = "tests/scenarios/features"

[tool.uv.build-backend]
module-root = "."
module-name = "meldingen"

[tool.uv.sources]
meldingen-core = { git = "https://github.com/Amsterdam/meldingen-core.git" }
